cmake_minimum_required(VERSION 3.0)
project(Project3D)
# set(COMPILE_FLAGS "-Wall -pedantic -pedantic-errors")
set(COMPILE_FLAGS "-std=c11 -Wall -pedantic")
set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} ${COMPILE_FLAGS}")
add_executable(p3d main.c game.c renderer.c)
target_link_libraries(p3d SDL2)
if(APPLE)
	include_directories(/usr/local/include)
	link_directories(/usr/local/lib)
	find_library(OPENGL_FRAMEWORK OpenGL)
	mark_as_advanced(OPENGL_FRAMEWORK)
#	target_link_libraries(p3d ${OPENGL_FRAMEWORK})
else()
	target_link_libraries(p3d m)
endif(APPLE)
